# ppc3b3n

./: Makefile  Makefile.am  Makefile.in  c_b_gestion_des_coach  callbacks.c  callbacks.h  coach.c  coach.h  coaches.txt  config.h  config.status  configure  configure.in  gestion_evenements  interface.c  interface.c.bak  interface.h  main.c  projet8  projet8.glade  projetc1.glade  projetc1.gladep
.deps/: callbacks.Po  coach.Po  fonctions.Po
